# random-animation

./: CMakeLists.txt
src/: main.cpp  noise.cpp  noise.hpp
